--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,10 +17,12 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install and test
-      run: |
-        npm install
-        npm test
-        npm publish
+    - name: Install
+      run: npm install
+    - name: Test
+      run: npm test
+    - name: Publish
+      run: npm publish
       env:
         CI: true
+        NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
