Add version patch to workflow

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,6 +23,8 @@ jobs:
       run: npm install
     - name: Test
       run: npm test
+    - name: Bump package version
+      run: npm version patch
     - name: Publish
       run: npm publish
       env:
