--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,7 +24,10 @@ jobs:
     - name: Test
       run: npm test
     - name: Bump package version
-      run: npm version patch
+      run: | 
+      git config --global user.email "hidde95@gmail.com"
+      git config --global user.name "hiddeottens"
+      npm version patch
     - name: Publish
       run: npm publish
       env:
