Add git push to workflow

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -28,6 +28,7 @@ jobs:
         git config --global user.email "hidde95@gmail.com"
         git config --global user.name "hiddeottens"
         npm version patch
+        git push
     - name: Publish
       run: npm publish
       env:
