--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,6 +1,9 @@
 name: Node CI
 
-on: [push]
+on:
+  push:
+    branches:
+    - master
 
 jobs:
   build:
@@ -28,7 +31,7 @@ jobs:
         git config --global user.email "hidde95@gmail.com"
         git config --global user.name "hiddeottens"
         npm version patch
-        git push
+        git push origin HEAD
     - name: Publish
       run: npm publish
       env:
