--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,13 +27,15 @@ jobs:
     - name: Test
       run: npm test
     - name: Bump package version
-      run: | 
-        git config user.email "infra@timechimp.com"
-        git config user.name "TC Bot"
+      run: |
+        git switch -c master
+        git config user.name "$GITHUB_ACTOR"
+        git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
         npm version patch
-        git push origin HEAD
+        git push "https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY"
     - name: Publish
       run: npm publish
       env:
         CI: true
         NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
