--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,8 +29,8 @@ jobs:
     - name: Bump package version
       run: |
         git switch -c master
-        git config user.name "$GITHUB_ACTOR"
-        git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+        git config user.name "hiddeottens"
+        git config user.email "hidde95@gmail.com"
         npm version patch
         git push "https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY"
     - name: Publish
