Update .npmrc file

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 registry=https://npm.pkg.github.com/timechimp-bv
-//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}
+//registry.npmjs.org/:_authToken=${NPM_TOKEN}
