--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build:storybook": "build-storybook"
   },
   "dependencies": {
+    "@timechimp-bv/helper-functions": "^0.1.0",
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
