Add publish script

--- a/package.json
+++ b/package.json
@@ -5,16 +5,14 @@
     "type": "git",
     "url": "https://github.com/timechimp-bv/components.git"
   },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
-  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "storybook": "start-storybook -p 6006",
-    "build:storybook": "build-storybook"
+    "build:storybook": "build-storybook",
+    "publish": "npm version patch && npm publish --access public"
   },
   "dependencies": {
     "@timechimp-bv/helper-functions": "^0.1.0",
