--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -33,8 +33,8 @@ jobs:
     #     git config user.email "hidde95@gmail.com"
     #     npm version patch
     #     git push "https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY"
-    - name: Publish
-      run: npm publish
+    # - name: Publish
+    #   run: npm publish
       env:
         CI: true
         NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
