Remove git hook

--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
-      "pre-push": "npm version patch"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
