--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@timechimp-bv/components",
   "version": "0.1.12",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/timechimp-bv/components.git"
