--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "core-js": "^3.3.2",
     "date-fns": "^2.6.0",
     "date-fns-tz": "^1.0.8",
+    "v-tooltip": "^2.0.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
