--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "prettier": "^1.18.2",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
+    "storybook-vue-router": "^1.0.7",
     "typescript": "~3.5.3",
+    "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.6.10"
   },
   "husky": {
