--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
-    "vue-property-decorator": "^8.3.0"
+    "vue-property-decorator": "^8.3.0",
+    "vue-virtual-scroll-list": "^1.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
