Add color picker component

--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
         "date-fns": "^2.6.0",
         "date-fns-tz": "^1.0.8",
         "v-tooltip": "^2.0.2",
+        "verte": "0.0.12",
         "vue": "^2.6.10",
         "vue-class-component": "^7.0.2",
         "vue-property-decorator": "^8.3.0",
-        "vue-virtual-scroll-list": "^1.4.2",
-        "vue-slider-component": "^3.0.41"
+        "vue-slider-component": "^3.0.41",
+        "vue-virtual-scroll-list": "^1.4.2"
     },
     "devDependencies": {
         "@babel/core": "^7.6.4",
